# z-cleaner-2

./: .env  .gitignore  ARCHITECTURE.md  CLOUDMERSIVE_SETUP.md  COMMANDS.md  COMPLETION_REPORT.md  FILE_MANIFEST.md  GITHUB_DEPLOYMENT.md  ICONS_SETUP.md  INSTALLER_SETUP.md  LOGO_AND_ASSETS.md  PRIVACY_POLICY_INTEGRATION.md  PROJECT_COMPLETE.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_CHECKLIST.md  SIDEBAR_LOGO.md  SIGNATURE_DATABASE.md  START_HERE.md  VIRUS_SCAN_API.md  dev.sh  generate-installer-assets-from-logo.py  generate-installer-assets.py  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
installer/: EULA_FR.txt  LICENSE.txt  PRIVACY_POLICY_EN.txt  PRIVACY_POLICY_FR.txt  README.txt  WELCOME_FR.txt  build-installer.ps1  build-installer.sh  z-cleaner-installer.iss
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  models.rs
src-tauri/src/commands/: analyzer.rs  cleaner.rs  disk_analysis.rs  junk_detector.rs  malware_detector.rs  mod.rs  optimizer.rs  signature_db.rs  virus_scanner.rs
src-tauri/tests/: virus_scan_test.rs
src/components/: Analyzer.tsx  Cleaner.tsx  Dashboard.tsx  Optimizer.tsx  Settings.tsx
src/hooks/: useTranslation.ts
src/i18n/: en.json  fr.json
