[package]
name = "z-cleaner"
version = "1.0.0"
description = "Z-Cleaner - Nettoyeur système multiplateforme"
authors = ["Elgrace Technologies"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
walkdir = "2.4"
regex = "1.10"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"
sha2 = "0.10"
libc = "0.2"
reqwest = { version = "0.11", features = ["multipart", "json"] }
dotenv = "0.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
